--- a/templates/mirabelle.edn.j2
+++ b/templates/mirabelle.edn.j2
@@ -1,5 +1,6 @@
 {:tcp {:host "0.0.0.0"
-       :port 5555}
+       :port 5555
+       :native? true}
  :http {:host "0.0.0.0"
         :port 5558}
  :websocket {:host "0.0.0.0"
